--- a/index.html
+++ b/index.html
@@ -5,14 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
+
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <header>
+      <img src="images/spotify-logo.png" height="40px" />
+      <nav>
+        <ul>
+          <li>Premium</li>
+          <li>Discover</li>
+          <li>Help</li>
+          <li>Download</li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="top">
+      <h1>Music for everyone.</h1>
+      <p>
+        Spotify is now free on mobile, tablet and computer. Listen to the right
+        music, wherever you are.
+      </p>
+    </section>
+
+    <section class="middle" height="600px">
+      <h2>What’s on Spotify?</h2>
+
+      <div>
+        <h3>Millions of Songs</h3>
+        <img src="images/music-icon.png" height="30px" />
+        <p>There are millions of songs on Spotify</p>
+      </div>
+      <div>
+        <h3>HD Music</h3>
+        <img src="images/high-quality-icon.png" height="30px" />
+        <p>Listen to music as if you were listening live</p>
+      </div>
+      <div>
+        <h3>Stream Everywhere</h3>
+        <img src="images/devices-icon.png" height="30px" />
+        <p>Stream music on your smartphone, tablet or computer</p>
+      </div>
+    </section>
+
+    <section class="bottom">
+      It’s as yeezy as Kanye West.
+      <div>
+        <h4>Search</h4>
+        <p>Know what you want to listen to? Just search and hit play.</p>
+      </div>
+
+      <div>
+        <h4>Browse</h4>
+        <p>
+          Check out the latest charts, brand new releases and great playlists
+          for right now.
+        </p>
+      </div>
+
+      <div>
+        <h4>Discover</h4>
+        <p>
+          Enjoy new music every Monday with your own personal playlist. Or sit
+          back and enjoy Radio.
+        </p>
+      </div>
+
+      <img src="images/spotify-icon-white.png" height="40px" />
+      <img src="images/spotify-app.jpg" width="200px" />
+    </section>
   </body>
 </html>
